--- a/styles.css
+++ b/styles.css
@@ -376,14 +376,25 @@ nav ul li a {
 
 
 
-
+.centered-div-wide-order {
+    text-align: center;
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
 
 .image-container {
     display: flex;
     justify-content: center;
+    gap: 60px;
+    padding: 0;
+}
+
+.image-text-container {
+    display: flex;
+    justify-content: center;
     gap: 80px;
-    padding: 20px;
-    max-width: 1200px;
+    padding: 0;
 }
 
 .image-item {
@@ -392,8 +403,8 @@ nav ul li a {
 }
 
 .image-item img {
-    width: 40%;
-    height: auto;
+    width: 80%;
+
 }
 
 .image-text {
