--- a/styles.css
+++ b/styles.css
@@ -411,3 +411,37 @@ nav ul li a {
     margin-bottom: 40px;
     font-size: 20px;
 }
+
+
+@media (max-width: 600px) {
+    .centered-div-wide-order {
+        text-align: center;
+        width: 85%;
+        margin: 0 auto;
+        padding-top: 20px;
+    }
+
+    .image-container {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        padding: 0;
+    }
+
+    .image-text-container {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+        padding: 0;
+    }
+
+    .image-item {
+        text-align: center;
+        width: 40%;
+    }
+
+    .image-item img {
+        width: 100%;
+    }
+
+}
